2009-01-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Fix bug #460162 -
	Find In Files dialog doesn't retain settings

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Enable UserInformation panels.

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Add a GetUserInformation
	overload for getting user information from a project.

	* MonoDevelop.Ide.Gui/UserInformation.cs: Add IsValid convenience
	property.

2009-01-20  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/objects.xml:
	* gtk-gui/MonoDevelop.Ide.SelectEncodingsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewFileDialog.cs:
	* gtk-gui/MonoDevelop.Ide.OverridesImplementsDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.NewProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.IncludeFilesDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.ExportProjectDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.AddinLoadErrorDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.KeyBindingsPanel.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.TasksPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.SelectReferenceDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.EncapsulateFieldDialog.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.OptionPanels.AddInsPanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.CodeTemplates.CodeTemplatePanelWidget.cs:
	* gtk-gui/MonoDevelop.Ide.Gui.Dialogs.BreakpointPropertiesDialog.cs:
	Updated.

2009-01-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs: In file
	templates, allow specifying assembly references required for building
	the file. Those references will be added to the project when adding
	the file template.

	* MonoDevelop.Ide.Gui/ProjectOperations.cs: If the solution has been
	modified when changing the project options, save it.

2009-01-16  Michael Hutchinson  <mhutchinson@novell.com>
